# hopandhaul

./: .gitignore  .noslopignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  gateway_suggestion.md  gateway_suggestion.yml
.github/workflows/: ci.yml  mirror.yml  pages.yml  release.yml
docs/: DESIGN.md  api.md
src/hopandhaul/: __init__.py  __main__.py  _secrets.py  dates.py  duffel.py  emissions.py  flights.py  geo.py  geoapify.py  go.py  itinerary.py  multicity.py  places.py  providers.py  secrets.local.example.json  server.py  transit.py  trip.py  weather.py
src/hopandhaul/data/: airports.json  fareanchors.json  ferries.json  gateways.json  landgrid.json
src/hopandhaul/integrations/: __init__.py  net.py
src/hopandhaul/ui/: api.js  app.js  format.js  geo-labels.js  i18n.js  index.html  lang.js  manifest.webmanifest  map.js  results.js  search.js  state.js  styles.css  sw.js  theme-boot.js  theme.js  transit.js
src/hopandhaul/ui/engine/: data.js  emissions.js  geo.js  itinerary.js  plan.js  pyround.js  search.js  trip.js  validate.js
src/hopandhaul/ui/i18n/: ar.json  bg.json  bn.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fa.json  fi.json  fil.json  fr.json  he.json  hi.json  hr.json  hu.json  id.json  is.json  it.json  ja.json  ko.json  lt.json  lv.json  ms.json  nb.json  nl.json  (+17 more)
tests/web_parity/: cases.json  check.mjs  gen_fixtures.py
tools/: build_fare_anchors.py  build_land_grid.py  check_i18n.py
