[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hopandhaul"
version = "0.3.0"
description = "Flies you into the cheap airport, then tells you honestly whether the train ride is worth it."
readme = "README.md"
license = { text = "Prosperity Public License 3.0.0" }
requires-python = ">=3.10"
authors = [{ name = "Cole Munz" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/munzzyy/hopandhaul"

[project.scripts]
hopandhaul = "hopandhaul.__main__:main"
hopandhaul-serve = "hopandhaul.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hopandhaul = ["ui/**", "data/*.json"]
